[package]
name = "sequential"
version = "0.3.0"
edition = "2021"
description = "A configurable sequential number generator."
license = "MIT OR Apache-2.0"
keywords = ["data management"]
repository = "https://github.com/emabee/sequential"

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true}

[dev-dependencies]
serde_json = "*"
version-sync = "0.9"
